# labelserver

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs  printer.rs
static/: index.html
