[package]
name = "labelserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.18", features = ["v4"] }
